# change-pdf

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  deploy_shared_ai.ps1  docker-compose.yml  errors.txt  main.py  migrate_collection.py  pyproject.toml  requirements.txt
static/: index.html
