[project]
name = "change-pdf"
version = "0.1.0"
description = "PDF word finder, redactor, and replacer"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymupdf>=1.24.0,<1.26",
    "python-multipart",
]

[tool.uv]
dev-dependencies = []

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
