[project]
name = "change-pdf"
version = "0.1.0"
description = "PDF word finder, redactor, and replacer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymupdf>=1.24.0,<1.26",
    "python-multipart",
    "qdrant-client>=1.9",
    "python-dotenv>=1.0",
    "minio>=7.0",
    "streamlit>=1.35",
]

[dependency-groups]
dev = []

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
